test/files/neg/t3015.check
t3015.scala:7: error: scrutinee is incompatible with pattern type;
 found   : _$1 where type _$1
 required: java.lang.String
  val b(foo) = "foo" 
       ^
one error found
